# MaterialFiles

./: README.md  build.gradle
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/me/zhanghai/android/files/about/: AboutFragment.kt
app/src/main/java/me/zhanghai/android/files/nonfree/: CrashlyticsInitializer.kt
app/src/main/res/values/: colors_material3.xml  themes_material3.xml
gradle/wrapper/: gradle-wrapper.properties
